--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name="pl.kilometrowka.KalendarzActivity"
             android:label="@string/kalendarz"
+            android:windowSoftInputMode="adjustPan">
             >
         </activity>
         <activity
