--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,15 @@
 # Generated files
 bin/
 gen/
+bin/*
+gen/*
 
 # Gradle files
 .gradle/
 build/
+
+.gradle/*
+build/*
 
 # Local configuration file (sdk path, etc)
 local.properties
