--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-20
-android.library.reference.1=remoteLibrary/library
-android.library.reference.2=../../Documents/workspace4/appcompat_v7
+android.library.reference.1=remoteLibrary\\library
+android.library.reference.2=../android-support-v7-appcompat
