--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,14 +19,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/_AppTheme" >
-        <activity
-            android:name="pl.kilometrowka.MainActivity"
-            android:label="@string/app_name" >
-           
-        </activity>
+
         <activity
             android:name="pl.kilometrowka.KalendarzActivity"
-            android:label="@string/kalendarz"
+            android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
 
              <intent-filter>
