--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="lib" path="libs/PDFjet.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/greendao-1.3.0-beta-1.jar"/>
+	<classpathentry kind="lib" path="libs/mint-4.0.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
