--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-20
 android.library.reference.1=..\\android-support-v7-appcompat
 android.library.reference.2=../library
+android.library.reference.3=C:/Users/Mateusz/workspace_kilometrowka/gridlayout_v7
